--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     // Android View Model & Live Data
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:reactivestreams:1.1.1'
 
     // Android Room
     implementation 'android.arch.persistence.room:runtime:1.1.1'
@@ -44,7 +45,11 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 
     // Kotlin
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.51"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.60"
+
+    // RX Java
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
 
     // Test
     testImplementation 'junit:junit:4.12'
